Change name from *Block, to just *

--- a/release.json
+++ b/release.json
@@ -1,12 +1,12 @@
 {
-  "nio/PickleBlock": {
+  "nio/Pickle": {
     "language": "Python",
-    "url": "git://github.com/nio-blocks/pickle-block.git",
+    "url": "git://github.com/nio-blocks/pickle.git",
     "version": "1.0.0"
   },
-  "nio/UnpickleBlock": {
+  "nio/Unpickle": {
     "language": "Python",
-    "url": "git://github.com/nio-blocks/pickle-block.git",
+    "url": "git://github.com/nio-blocks/pickle.git",
     "version": "1.0.0"
   }
 }
